@@ -62,6 +62,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   is no longer possible. 
 * $wgMessageCacheType defines now the type of cache used by the MessageCache class,
   previously it was choosen based on $wgParserCacheType
+* $wgExtensionAliasesFiles option to simplify adding aliases to special pages
+* provided by extensions, in a similar way to $wgExtensionMessagesFiles
 
 === New features in 1.13 ===
 
